dfir_rs/tests/compile-fail/surface_dest_sink_baditem.rs.ignore
use std::net::{Ipv4Addr, SocketAddr};

use dfir_rs::dfir_syntax;
use dfir_rs::util::bind_udp_bytes;

#[dfir_rs::main]
async fn main() {
    let socket_addr: SocketAddr = (Ipv4Addr::LOCALHOST, 0).into();
    let (outbound, _inbound, _) = bind_udp_bytes(socket_addr).await;

    let mut df = dfir_syntax! {
        source_iter(0..10)
            -> map(|i| bytes::Bytes::from_static(&b"hello world!"[i..(i + 2)]))
            -> dest_sink(outbound);
    };
    df.run_available();
}
